--- a/public/newmcq.css
+++ b/public/newmcq.css
@@ -11,7 +11,7 @@ body{
 }
 .bar{
 	position: fixed;
-	background-color: #FFAB40;
+	background-color: #c9e6f2;
 	height:50px;
 	width:100vw;
  	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
